--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vunhiem.drinkwater">
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_app_icon"
@@ -11,26 +13,32 @@
         android:roundIcon="@mipmap/ic_app_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".screen.settingweight.SettingWeight"></activity>
+        <activity android:name=".screen.privacypolice.PrivacyPoliceActivity"></activity>
+        <activity android:name=".screen.settingweight.SettingWeight" />
 
         <service
-            android:launchMode="singleTop"
             android:name=".service.DrinkWaterService"
             android:enabled="true"
-            android:exported="false" />
+            android:exported="false"
+            android:launchMode="singleTop" />
 
         <activity android:name=".screen.dailywatermain.SetWeightActivity" />
         <activity android:name=".screen.splash.SplashActivity2" />
-        <activity android:name=".screen.splash.SplashActivity">
+        <activity android:name=".screen.splash.SplashActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".screen.dailywatermain.DrinkwaterMainActivity" />
+        <activity
+            android:screenOrientation="portrait"
+            android:name=".screen.dailywatermain.DrinkwaterMainActivity" />
         <activity android:name=".screen.dailywater.DailyWaterActivity" />
         <activity android:name=".screen.personaldata.PersonalDataActivity" />
+        <activity android:name=".screen.develop.DevelopActivity" />
+
         <receiver
             android:name=".screen.dailywatermain.BootUpReceiver"
             android:enabled="true"
@@ -41,6 +49,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
+        <receiver android:name=".screen.dailywatermain.AlarmReceiver"></receiver>
+        <receiver android:name=".screen.dailywatermain.AlarmReceiver2"></receiver>
+        <receiver android:name=".screen.dailywatermain.WakeUpReceiver"></receiver>
+        <receiver android:name=".screen.dailywatermain.BedReceiver"></receiver>
     </application>
 
 </manifest>
