--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vunhiem.drinkwater">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +15,12 @@
         android:roundIcon="@mipmap/ic_app_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".screen.privacypolice.PrivacyPoliceActivity"></activity>
+        <service
+            android:name=".service.YourJobService"
+            android:permission="android.permission.BIND_JOB_SERVICE"></service>
+
+
+        <activity android:name=".screen.privacypolice.PrivacyPoliceActivity" />
         <activity android:name=".screen.settingweight.SettingWeight" />
 
         <service
@@ -24,7 +31,8 @@
 
         <activity android:name=".screen.dailywatermain.SetWeightActivity" />
         <activity android:name=".screen.splash.SplashActivity2" />
-        <activity android:name=".screen.splash.SplashActivity"
+        <activity
+            android:name=".screen.splash.SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,8 +41,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:screenOrientation="portrait"
-            android:name=".screen.dailywatermain.DrinkwaterMainActivity" />
+            android:name=".screen.dailywatermain.DrinkwaterMainActivity"
+            android:screenOrientation="portrait" />
         <activity android:name=".screen.dailywater.DailyWaterActivity" />
         <activity android:name=".screen.personaldata.PersonalDataActivity" />
         <activity android:name=".screen.develop.DevelopActivity" />
@@ -49,10 +57,11 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
-        <receiver android:name=".screen.dailywatermain.AlarmReceiver"></receiver>
-        <receiver android:name=".screen.dailywatermain.AlarmReceiver2"></receiver>
-        <receiver android:name=".screen.dailywatermain.WakeUpReceiver"></receiver>
-        <receiver android:name=".screen.dailywatermain.BedReceiver"></receiver>
+        <receiver android:name=".screen.dailywatermain.AlarmReceiver" />
+        <receiver android:name=".screen.dailywatermain.AlarmReceiver2" />
+        <receiver android:name=".screen.dailywatermain.WakeUpReceiver" />
+        <receiver android:name=".screen.dailywatermain.BedReceiver" />
+        <receiver android:name=".screen.dailywatermain.NewDayReceiver" />
     </application>
 
 </manifest>
